--- a/royallease/src/index.css
+++ b/royallease/src/index.css
@@ -1,14 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: red;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;600;700;800&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+
+
+
+* {
+	font-family: 'Poppins', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
+	margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	-moz-osx-font-smoothing: grayscale;
+	min-height: 100vh;
+}
+
+.wrapper {
+	display: grid;
+}
+
+
+.nav-bar {
+	display: flex;
+	align-items: center;
+	margin: 5px 50px 40px 50px;
+}
+
+.navlinks {
+	list-style: none;
+}
+
+.navlinks li {
+	display: inline-block;
+	padding: 14px;
+	font-weight: 500;
+	line-height: 16px;
+
+}
+
+.navlinks li:hover {
+	color: rgb(255, 217, 155);
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.navlinks>button {
+	background-color: transparent;
+}
+
+.login-button {
+	align-self: center;
+	margin-left: auto;
+	background-color: rgb(208, 208, 208);
+	border-radius: 29px;
+	border: 1px solid rgb(208, 208, 208);
+	color: black;
+	font-size: 15px;
+	padding: 6px 30px;
+	cursor: pointer;
+	transition: 0.3s;
+	text-decoration: none;
+}
+
+.sign-button {
+	margin-left: 20px;
+	background-color: #081f2d;
+	border-radius: 29px;
+	border: 1px solid #081F2D;
+	color: white;
+	font-size: 15px;
+	padding: 6px 30px;
+	cursor: pointer;
+	transition: 0.3s;
+	text-decoration: none;
+}
+
+.sign-button:hover {
+	background-color: rgb(255, 217, 155);
+	color: #081F2D;
+	border-color: #081F2D;
+	transition: 0.3s;
+}
+
+.login-button:hover {
+	background-color: rgb(255, 217, 155);
+	color: #081F2D;
+	border-color: #081F2D;
+	transition: 0.3s;
+}
+
+.logo {
+	cursor: pointer;
+	height: 55px;
+}
+.logo2{
+	display: none;
+	cursor: pointer;
+	height: 55px;
+}
+.logo:hover .logo2{
+	display: block;
+	cursor: pointer;
+	height: 55px;
+}
+.moon{
+	margin-left: 20px;
+}
+.service{
+	background-color:#D9D9D9;
+	width: 100%;
+	height: 50vh;
 }
